--- a/booklit.yaml
+++ b/booklit.yaml
@@ -12,7 +12,7 @@ jobs:
             type: registry-image
             source: { repository: busybox }
           run:
-            path: sh
+            path: /bin/sh
             args:
             - -c
             - |
