worker: wire metrics exporters
adding to `workercmd` the configuration for the emitters, one can now
configure how which emitter to use:

- prometheus (pull-based)
- dogstatsd (push-based)
- stdout (debug)

`hack/overrides/prometheus` is updated to reflect the fact that now
workers expose their metrics too

Signed-off-by: Ciro S. Costa <cscosta@pivotal.io>

--- a/hack/overrides/prometheus.yml
+++ b/hack/overrides/prometheus.yml
@@ -13,6 +13,11 @@ services:
       CONCOURSE_PROMETHEUS_BIND_IP: "0.0.0.0"
       CONCOURSE_PROMETHEUS_BIND_PORT: "9100"
 
+   worker:
+     environment:
+       CONCOURSE_METRICS_PROMETHEUS_BIND_IP: "0.0.0.0"
+       CONCOURSE_METRICS_PROMETHEUS_BIND_PORT: "9100"
+
   prometheus:
     image: prom/prometheus
     entrypoint:
@@ -29,6 +34,7 @@ services:
             static_configs:
               - targets:
                 - 'web:9100'
+                - 'worker:9100'
         " > config.yml
 
           exec prometheus \
